# libre-claw

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  PRODUCTION_READY_CHECKLIST.md  README.md  RELEASE.md  ROADMAP.md  SOUL.md  VOICE_CHANNEL_ROADMAP.md  pyproject.toml  soul.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.workspace_test/: HEARTBEAT-BOOTSTRAP.md  USER.md
config/: default.toml
docs/: DEMOS.md  GETTING_STARTED.md  SEARXNG_INTEGRATION.md  VERCEL_SKILLS_INTEGRATION.md
libre_claw/: __init__.py  __main__.py  agent.py  api.py  config.py  heartbeat.py  memory.py  tui.py  workspace.py
libre_claw/backends/: __init__.py  anthropic_api.py  base.py  claude_code.py  codex_cli.py  ollama.py  openai_api.py  openai_codex_gateway.py  openai_codex_oauth.py
libre_claw/defaults/: AGENTS.md  CONVERSATION_SUMMARY.md  HEARTBEAT-AUDIT.md  HEARTBEAT.md  IDENTITY.md  INFRA.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  __init__.py
libre_claw/utils/: __init__.py  cost_tracker.py
scripts/: install.sh
src/libre_claw/: RELEASE.md  __init__.py  __main__.py  cli.py  config.py  daemon.py  default.toml  release.py
src/libre_claw/auth/: __init__.py  api_keys.py  codex.py  oauth.py  tokens.py
src/libre_claw/core/: __init__.py  agent.py  automations.py  goal.py  heartbeat.py  mcp.py  memory.py  permissions.py  review.py  runs.py  sandbox.py  searxng.py  session.py  skills.py  soul.py  themes.py  tools.py  usage.py  workspace.py
src/libre_claw/integrations/: petdex.py
src/libre_claw/providers/: __init__.py  anthropic.py  anthropic_catalog.py  base.py  codex.py  codex_catalog.py  factory.py  local.py  ollama.py  ollama_catalog.py  openai.py  openrouter.py  openrouter_catalog.py
src/libre_claw/skills/hacker-news-brief/: SKILL.md
src/libre_claw/skills/server-monitor/: SKILL.md
src/libre_claw/telegram/: __init__.py  auth.py  bot.py  bridge.py  formatting.py  handlers.py
src/libre_claw/tools_builtin/: __init__.py  browser.py  filesystem.py  git.py  http.py  mcp.py  schedule.py  search.py  shell.py  skills.py  think.py  web_search.py
src/libre_claw/tui/: __init__.py  app.py
src/libre_claw/web/: __init__.py  dashboard.py
src/libre_claw/web/assets/: __init__.py
tests/: __init__.py  test_agent.py  test_anthropic_provider.py  test_auth.py  test_automations.py  test_backends.py  test_cli.py  test_codex_auth.py  test_codex_provider.py  test_config.py  test_cost_tracker.py  test_daemon.py  test_goal.py  test_imports.py  test_local_provider.py  test_mcp.py  test_memory.py  test_openai_provider.py  test_openrouter_provider.py  test_permissions.py  test_petdex.py  test_providers.py  test_release.py  test_review.py  test_runs.py  test_skills.py  test_soul.py  test_telegram.py  test_tools.py  test_tui.py  test_usage.py  test_workspace.py
