# Copyright 2026 Kroonen AI Inc. (https://kroonen.ai)
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "libre-claw"
version = "0.1.0"
description = "A terminal-native AI agent harness with a Textual TUI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Kroonen AI Inc." },
]
keywords = ["agent", "terminal", "tui", "textual", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=1.0",
    "rich>=13.0",
    "click>=8.1",
    "httpx>=0.27",
    "anthropic>=0.104.1",
    "openai>=1.50",
    "aiosqlite>=0.20",
    "python-telegram-bot>=21.0",
    "keyring>=25.0",
    "cryptography>=43.0",
    "authlib>=1.3",
    "joserfc>=1.0",
    "aiohttp>=3.10",
    "structlog>=24.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
libre-claw = "libre_claw.cli:main"
lc = "libre_claw.cli:main"

[project.urls]
Homepage = "https://kroonen.ai"

[tool.hatch.build.targets.wheel]
packages = ["src/libre_claw"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/RELEASE.md",
    "/config",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
asyncio_mode = "auto"
